--- a/src/interface/ui/image_window.ui
+++ b/src/interface/ui/image_window.ui
@@ -502,6 +502,9 @@
      <string>View</string>
     </property>
     <addaction name="actionPlotSettings"/>
+    <addaction name="actionX_axis"/>
+    <addaction name="actionY_axis"/>
+    <addaction name="actionHistogram"/>
    </widget>
    <addaction name="menuData_Sources"/>
    <addaction name="menuSave"/>
@@ -521,6 +524,39 @@
    </property>
    <property name="text">
     <string>Plot Settings</string>
+   </property>
+  </action>
+  <action name="actionX_axis">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="checked">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>X axis</string>
+   </property>
+  </action>
+  <action name="actionY_axis">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="checked">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Y axis</string>
+   </property>
+  </action>
+  <action name="actionHistogram">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="checked">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Histogram</string>
    </property>
   </action>
  </widget>
